--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" ontent="width=device-width, initial-scale-1">
     <title>Senhas Chamadas - Controle de Filas</title>
 
-    <link rel="stylesheet" type="text/css" href="css/grid.css">
-    <link rel="stylesheet" type="text/css" href="css/global.css">
+    <link rel="stylesheet" type="text/css" href="CSS/grid.css">
+    <link rel="stylesheet" type="text/css" href="CSS/global.css">
 </head>
 <body>
     
@@ -53,7 +53,7 @@
         
     </div>
 
-    <script src="js/senha.js"></script>
+    <script src="JS/senha.js"></script>
 </body>
 </html>
 
