--- a/painel.html
+++ b/painel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel - Controle de Senhas</title>
-    <link rel="stylesheet" type="text/css" href="css/painel.css">
+    <link rel="stylesheet" type="text/css" href="CSS/painel.css">
 </head>
 <body>
     <main id="view-prox">
@@ -24,6 +24,6 @@
     </div>
     
 
-    <script src="js/painel.js"></script>
+    <script src="JS/painel.js"></script>
 </body>
 </html>
